# TX-Terminal

./: ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  FIXES_SUMMARY.md  INSTALL.md  LICENSE  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  README.md  SETUP.md  build.sh
.github/workflows/: android-build.yml  android-release.yml
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_pty.cpp  android_renderer.cpp  tx_jni.cpp
android/app/src/main/java/com/tx/terminal/: MainActivity.java  TXApplication.kt  TXNative.java
android/app/src/main/java/com/tx/terminal/data/: TerminalPreferences.kt  TerminalSession.kt
android/app/src/main/java/com/tx/terminal/jni/: NativeTerminal.kt
android/app/src/main/java/com/tx/terminal/runtime/: RuntimeBootstrap.kt
android/app/src/main/java/com/tx/terminal/service/: TXService.kt
android/app/src/main/java/com/tx/terminal/ui/: MainActivity.kt
android/app/src/main/java/com/tx/terminal/ui/components/: Dialogs.kt  ExtraKeysBar.kt  TabBar.kt  TerminalSurface.kt
android/app/src/main/java/com/tx/terminal/ui/screens/: MainScreen.kt
android/app/src/main/java/com/tx/terminal/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/tx/terminal/util/: ByteQueue.kt
android/app/src/main/java/com/tx/terminal/viewmodel/: TerminalViewModel.kt
android/app/src/main/res/drawable/: ic_menu_terminal.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/: libs.versions.toml
include/tx/: common.hpp  config.hpp  parser.hpp  pty.hpp  renderer.hpp  screen.hpp  terminal.hpp
src/: config.cpp  main_desktop.cpp  parser.cpp  pty.cpp  renderer.cpp  screen.cpp  terminal.cpp
tests/: CMakeLists.txt  test_parser.cpp  test_pty.cpp  test_screen.cpp
